<resources>
    <string name="app_name">Domoffon</string>
    <string name="title_home">Каталог</string>
    <string name="title_dashboard">Корзина</string>
    <string name="title_notifications">Покупки</string>
    <string name="title_user">Профиль</string>
    <string name="title_activity_payments">Корзина</string>
    <string name="title_activity_story">Покупки</string>
    <string name="title_activity_profile">Профиль</string>
    <string name="title_activity_item">Товар</string>
    <string name="title_activity_login">Domoffon</string>
    <string name="server_ip">http://92.255.242.163:2693/</string>
    <string name="next">Дальше</string>
    <string name="prev">Назад</string>
    <string name="finish">Отправить</string>
    <string name="review">Назад</string>
    <string name="label_your_name">Name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Optional</string>
    <string name="submit_confirm_message">Place the order with the deli? You will receive an email
        confirmation.</string>
    <string name="submit_confirm_button">Place order</string>
    <string name="prompt_email">Номер</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_city">Город</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">Некорректный номер</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_incorrect_password">Некорректный пароль</string>
    <string name="error_field_required">Это поле обязательно!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prep_to_reg">Впервые здесь? Зарегистрируйтесь!</string>
    <string name="reg">Регистрация</string>
    <string name="banner">rw15.ru</string>
    <string name="title_activity_reg">Регистрация</string>
    <string name="prompt_confirm_password">Подтверждение пароля</string>
    <string name="prompt_addr">Адрес доставки</string>
    <string name="prompt_CDEK">Терминал CDEK</string>
    <string name="prompt_surname">Фамилия</string>
    <string name="prompt_name">Имя</string>
    <string name="prompt_patronymic">Отчество</string>
    <string name="action_reg">Зарегистрироваться</string>
    <string name="title_activity_regi">Регистрация</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Настройки</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="p_title">Способ оплаты</string>
    <string name="p_nal">Наличные</string>
    <string name="p_dos">При получении</string>
    <string name="p_ok">Заказать</string>
    <string name="p_cost">Стоимость</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="reg_next">Далее</string>
    <string name="reg_prev">Назад</string>
    <string name="reg_send">Готово</string>
</resources>