<HorizontalScrollView android:id="@+id/checkout_hsv_scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_constraintLeft_creator="1"
    tools:layout_constraintRight_creator="1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/reg_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
         android:id="@+id/reg_form"
         android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:layout_weight="0.30">

         <LinearLayout
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:gravity="center_vertical|center_horizontal"
             android:layout_height="wrap_content"
             android:orientation="vertical">

             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                 <AutoCompleteTextView
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="3.94"
                     android:hint="@string/prompt_email"
                     android:inputType="phone"
                     android:maxLines="1"
                     android:singleLine="true" />

             </android.support.design.widget.TextInputLayout>

             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                 <EditText
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_password"
                     android:imeActionId="@+id/login"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:singleLine="true"
                     tools:ignore="InvalidImeActionId" />

             </android.support.design.widget.TextInputLayout>

             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                 <EditText
                     android:id="@+id/confirm_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_confirm_password"
                     android:imeActionId="@+id/login"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:singleLine="true"
                     tools:ignore="InvalidImeActionId" />

             </android.support.design.widget.TextInputLayout>

             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                 <AutoCompleteTextView
                     android:id="@+id/city"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_addr"
                     android:inputType="textPostalAddress"
                     android:maxLines="1"
                     android:singleLine="true" />

             </android.support.design.widget.TextInputLayout>

             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                 <AutoCompleteTextView
                     android:id="@+id/surname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_surname"
                     android:inputType="textCapWords"
                     android:maxLines="1"
                     android:singleLine="true" />

             </android.support.design.widget.TextInputLayout>

             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                 <AutoCompleteTextView
                     android:id="@+id/name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_name"
                     android:inputType="textCapWords"
                     android:maxLines="1"
                     android:singleLine="true" />

             </android.support.design.widget.TextInputLayout>

             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                 <AutoCompleteTextView
                     android:id="@+id/patronymic"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_patronymic"
                     android:inputType="textCapWords"
                     android:maxLines="1"
                     android:singleLine="true" />

             </android.support.design.widget.TextInputLayout>

             <Button
                 android:id="@+id/regbutton"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:background="#7AAE5C"
                 android:text="@string/action_sign_in"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold" />

         </LinearLayout>
     </ScrollView>

     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="0dp"
         android:autoLink="web"
         android:text="@string/banner"
         android:textAppearance="?android:attr/textAppearanceSmall" />
</HorizontalScrollView>
