<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView style="@style/WizardPageTitle"/>
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"/>
    </RelativeLayout>


    <!-- Login progress -->

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/layout_progress"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical|center_horizontal"
            />
    </FrameLayout>


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:paddingRight="?android:attr/listPreferredItemPaddingRight"
        android:layout_weight="0.53">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"

                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="3.94" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="InvalidImeActionId" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/chcbxsave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Сохранить" />

        </LinearLayout>
    </ScrollView>

    <View android:id="@+id/divider"
        android:background="?android:attr/dividerHorizontal"
        android:layout_height="1dp"
        android:layout_width="match_parent" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reg_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_item_background"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/reg" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/selectable_item_background"
            android:id="@+id/email_sign_in_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in" />

    </LinearLayout>

</LinearLayout>
